objects/Academy_Certification_Examination__c.object
<CustomObject>
    <description>Exams records applied to student in order to support achieved certifications</description>
    <fields>
        <fullName>Academy_Certification2__c</fullName>
        <label>Academy Certification</label>
        <referenceTo>Academy_Certification__c</referenceTo>
        <relationshipLabel>Academy Certification Examinations (Academy Certification)</relationshipLabel>
        <relationshipName>Academy_Certification_Examinations1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Certification_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the certification program</description>
        <label>Certification Program</label>
        <referenceTo>Academy_Certification_Program__c</referenceTo>
        <relationshipLabel>Academy Certification Examinations</relationshipLabel>
        <relationshipName>Academy_Certification_Examinations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certification_Student__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Certification Student</label>
        <referenceTo>Academy_Certification_Student__c</referenceTo>
        <relationshipLabel>Academy Certification Examinations</relationshipLabel>
        <relationshipName>Academy_Certification_Examinations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date when exam was or will be applied.</description>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <inlineHelpText>Number between 0 and 100</inlineHelpText>
        <label>Grade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Academy Certification Examinations</relationshipLabel>
        <relationshipName>Academy_Certification_Examinations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Examination Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <formula>Certification_Student__r.Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Name</label>
        <type>Text</type>
    </fields>
    <label>Academy Certification Examination</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Certification_Program__c</columns>
        <columns>Certification_Student__c</columns>
        <columns>Grade__c</columns>
        <columns>Status__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACE-{000000}</displayFormat>
        <label>Academy Certification Examination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academy Certification Examinations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>